Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48721

tst_pageindicator warnings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Quick: Controls 2
    • None
    • 28f6dfd8e86057d71de02c6448b0000e14773775

      $ ./tst_controls -input data/tst_pageindicator.qml 
      ********* Start testing of tst_controls *********
      Config: Using QtTest library 5.6.0, Qt 5.6.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 7.0.0 (clang-700.0.72) (Apple))
      PASS   : tst_controls::PageIndicator::initTestCase()
      QWARN  : tst_controls::PageIndicator::test_count() file:///Users/jpnurmi/Projects/qt-56/qtbase/qml/Qt/labs/controls/PageIndicator.qml:61: ReferenceError: pressed is not defined
      QWARN  : tst_controls::PageIndicator::test_count() file:///Users/jpnurmi/Projects/qt-56/qtbase/qml/Qt/labs/controls/PageIndicator.qml:61: ReferenceError: pressed is not defined
      PASS   : tst_controls::PageIndicator::test_count()
      PASS   : tst_controls::PageIndicator::test_currentIndex()
      PASS   : tst_controls::PageIndicator::test_interactive()
      PASS   : tst_controls::PageIndicator::cleanupTestCase()
      Totals: 5 passed, 0 failed, 0 skipped, 0 blacklisted
      ********* Finished testing of tst_controls *********
      

      I suppose initializing the 'pressed' context property for all items in QQuickPageIndicator::componentComplete() is too late. Perhaps we have to install an item change listener on the contentItem and monitor when children get added?

        For Gerrit Dashboard: QTBUG-48721
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes