PageIndicator: fix initialization of the 'pressed' context-property

Component.onCompleted was too late, so now it's done as soon as
delegate instances are created.

Change-Id: I2bc3e051de6e005c914494a7c674f6c04582ec23
Task-number: QTBUG-48721
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>